Fixing modal box

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -85,5 +85,28 @@
 			});
 		});
 	</script>
+
+	        		<scrit type="text/javascript">
+		 {{!-- function getId(btn_name){
+		 	console.log("HELLO CONSOLE");
+			$('#'+ btn_name).on('click',function(){        
+				$('.card-reveal').slideToggle('slow');
+			});
+		 	$('.card-reveal .close').on('click',function(){
+		 		$('.card-reveal').slideToggle('slow');
+			});
+		 }
+		
+		 $(document).ready(function() {
+			$("button").click(function(event) {
+		  alert(this.id);
+		       var btn_name = this.id;
+		console.log(btn_name);
+			  getId(btn_name);
+		 	});
+		}); --}}
+			
+	</scrit>
+
 </body>
 </html>
