--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -23,6 +23,7 @@
 			</li>
 		</ul>
 	<!-- //main-slider -->
+
 	<!-- top-brands -->
 	<div class="top-brands">
 		<div class="container">
@@ -32,53 +33,61 @@
 					<h4>We have pulled together our advertised offers into one place, so you won't miss out on any great deal.</h4>
 				</p>
 			</div>
-			<div class="agile_top_brands_grids">
-				
-					<div class="row">
-						<div class="col-md-9 col-md-offset-3">
-						{{# each products }}
-							{{# each this }}
-									<div class="card col-md-6 col-xs-3">
-										<div class="card-image">
-											<img class="img-responsive" src="images/laptop.png">
-										</div><!-- card image -->
-										<div class="card-content">
-											<span class="card-title">{{ this.title }}</span>                    
-											<button type="button" id="show" class="btn btn-tertiary pull-right" aria-label="Left Align">
-												<strong>More Info</strong>
-												{{!-- <i class="fa fa-ellipsis-v"></i> --}}
-											</button>
-										</div><!-- card content -->
-										<div class="card-action">
-													<a href="#" target="new_blank"><strong style="color: midnightblue">₦{{ this.price }}</strong></a> 
-													<a href="#" target="new_blank">Cloth</a>
-													<a href="#" target="new_blank">Body Accessory</a>
-													<a href="#" target="new_blank">Ankara</a>     
-										</div><!-- card actions -->
-										<div class="card-reveal">
-											<span class="card-title">Card Title</span> 
-											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-												<span aria-hidden="true">×</span>
-											</button>
-											<p>
-												{{ this.description }}
-												Here are some more information about {{ this.title }} that is only revealed once clicked on.
-												<strong>₦{{ this.price }}</strong>
-											</p>
-										</div><!-- card reveal -->
+	 <div class="agile_top_brands_grids">		
+		<div class="row">
+		 <div class="col-md-9 col-md-offset-3">
+			{{# each products }}
+				{{# each this }}
+					<div class="card col-md-6 col-xs-3">
+						<div class="card-image">
+							<img class="img-responsive" src="images/laptop.png">
+						</div><!-- card image -->
+						<div class="card-content">
+						<span class="card-title">{{ this.title }}</span>                    
+							<button type="button" id="btn_{{@index}}" aria-label="Left Align" class="btn btn-tertiary pull-right" data-toggle="modal" data-target="#myModal{{@index}}">
+								<strong>More Info</strong>
+									{{!-- <i class="fa fa-ellipsis-v"></i> --}}
+							</button>
+						</div><!-- card content -->
+						<div class="card-action">
+							<a href="#" target="new_blank"><strong style="color: midnightblue">₦{{ this.price }}</strong></a> 
+							<a href="#" target="new_blank">Cloth</a>
+							<a href="#" target="new_blank">Body Accessory</a>
+							<a href="#" target="new_blank">Ankara</a>     
+						</div><!-- card actions -->
+
+						<!-- Modal -->
+						<div class="modal fade" id="myModal{{@index}}" role="dialog">
+							<div class="modal-dialog">
+								<!-- Modal content-->
+								<div class="modal-content">
+									<div class="modal-header">
+										<button type="button" class="close" data-dismiss="modal">&times;</button>
+										<h4 class="modal-title"><strong>{{ this.title }}</strong></h4>
 									</div>
-								{{/each}}<br />
-						{{/each}}
-							</div>
-        </div>
-								<div class="clearfix"></div>
+									<div class="modal-body">
+										<p>
+											<span>₦{{ this.price }}</span>
+											<span>{{ this.description }}</span>
+										</p>
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+									</div>
+								</div>
 							</div>
 						</div>
-						</div>
-						<!-- SECOND TAB -->
+					</div>
+				{{/each}}<br />
+			{{/each}}
+			</div>
+		 </div>
+		<div class="clearfix"></div>
+		</div>
+	 </div>
+	 </div>
+							<!-- SECOND TAB -->
 <!-- //top-brands -->
-
-
 
 
 <!--brands-->
@@ -92,13 +101,8 @@
 				to the other shops is that they sell their products on other platforms.  --}}
 				{{!-- However,we use our website for extra design functionality and to highlight everyone's story
 				So if you have it flaunt it, Also integrate your social media platforms in to your ecommerce website design. --}}
-				<iframe src="https://dev.to/notifications"></iframe>
 			  </p>
 		</div>
 	</div>
 <!--//brands-->
-
-
-	{{!-- <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script> --}}
-	<!-- Latest compiled and minified JavaScript -->
 
