--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -40,7 +40,7 @@ a.navbar-list{
 }
 </style>
 	<div class="logo_products">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="w3ls_logo_products_left">
 				<h1><a href="/"><img src="images/logo2.png" width="70px" height="70px"/>whogobuyam</a></h1>
 			</div>
