Finished dashboard interface

--- a/views/user/dashboard.hbs
+++ b/views/user/dashboard.hbs
@@ -42,24 +42,24 @@
                           <div class="form-row">
                             <div class="col-md-6">
                               <div class="form-label-group">
-                                <input type="text" id="firstName" class="form-control" placeholder="First name">
+                                <input type="text" id="firstname" class="form-control" placeholder="First name">
                               </div>
                             </div>
                             <div class="col-md-6">
                               <div class="form-label-group">
-                                <input type="text" id="lastName" class="form-control" placeholder="Last name">
+                                <input type="text" id="lastname" class="form-control" placeholder="Last name">
                               </div>
                             </div>
                           </div>
                         </div>
                         <div class="form-group">
-                          <!-- <div class="form-label-group">
-                            <input type="tel" id="inputEmail" class="form-control" placeholder="Whatsapp number">
-                          </div> -->
                           <div class="form-row">
                             <div class="col-md-6">
                               <div class="form-label-group">
-                                <input type="tel" id="" class="form-control" placeholder="Phone Numer">
+                                <select name="" id="" class="form-control" placeholder="Product or Services">
+                                  <option>Seller</option>
+                                  <option>Craftmann>
+                                </select>
                               </div>
                             </div>
                             <div class="col-md-6">
@@ -73,12 +73,12 @@
                           <div class="form-row">
                             <div class="col-md-6">
                               <div class="form-label-group">
-                                <input type="" id="inputPassword" class="form-control" placeholder="State">
+                                <input type="" id="" class="form-control" placeholder="State">
                               </div>
                             </div>
                             <div class="col-md-6">
                               <div class="form-label-group">
-                                <input type="" id="confirmPassword" class="form-control" placeholder="Local Government">
+                                <input type="" id="" class="form-control" placeholder="Local Government">
                               </div>
                             </div>
                           </div>
@@ -86,14 +86,9 @@
 
                         <div class="form-group">
                           <div class="form-row">
-                            <div class="col-md-6">
+                            <div class="col-md-12">
                               <div class="form-label-group">
-                                <input type="password" id="inputPassword" class="form-control" placeholder="Your Services">
-                              </div>
-                            </div>
-                            <div class="col-md-6">
-                              <div class="form-label-group">
-                                <textarea class="form-control" placeholder="Local Government"></textarea>
+                                <textarea class="form-control" placeholder="About me"></textarea>
                               </div>
                             </div>
                           </div>
@@ -111,17 +106,13 @@
                           <div class="form-row">
                             <div class="col-md-6">
                               <div class="form-label-group">
-                                <input type="text" name="title" id="title" placeholder="Goods name" class="form-control">
+                                <input type="text" name="product_name" id="product_name" placeholder="Product name" class="form-control">
                               </div>
                             </div>
                             <div class="col-md-6">
                               <div class="form-label-group">
-                                <select name="category" id="category" class="form-control">
+                                <select name="product_category" id="product_category" class="form-control">
                                   <option>Automobile</option>
-                                  <option>Academic Maetrials</option>
-                                  <option>Body accessories</option>
-                                  <option>Clothings</option>
-                                  <option>Food Stuffs</option>
                                   <option>Electronics</option>
                                   <option>Home Appliance</option>
                                   <option>Office Appliance</option>
@@ -135,53 +126,46 @@
                           <div class="form-row">
                             <div class="col-md-6">
                               <div class="form-label-group">
-                                <input type="tel" class="form-control" name="price" id="price" type="number" placeholder="₦20000">
+                                <input type="tel" class="form-control" name="product_price" id="product_price" type="number" placeholder="Product Price ₦20000">
                               </div>
                             </div>
                             <div class="col-md-6">
                               <div class="form-label-group">
-                                <input type="tel" class="form-control" name="description" id="description" placeholder="description">
+                                <select name="product_status" id="product_status" class="form-control" placeholder="Product Status">
+                                  <option>New</option>
+                                  <option>Used</option>
+                                </select>
                               </div>
                             </div>
                           </div>
                         </div>
                         <div class="form-group">
                           <div class="form-row">
-                            <div class="col-md-6">
+                            <div class="col-md-12">
                               <div class="form-label-group">
-                                <input type="" id="inputPassword" class="form-control" value="upload picture">
-                              </div>
-                            </div>
-                            <div class="col-md-6">
-                              <div class="form-label-group">
-                                <input type="" id="confirmPassword" class="form-control">
+                                <textarea type="" name="" id="" class="form-control" placeholder="Description"></textarea>
                               </div>
                             </div>
                           </div>
                         </div>
-
                         <div class="form-group">
                           <div class="form-row">
-                            <div class="col-md-6">
+                            <div class="col-md-4">
                               <div class="form-label-group">
-                                <input type="password" id="inputPassword" class="form-control">
+                                <button class="btn btn-primary btn-block">Add Image</button>
                               </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-8">
                               <div class="form-label-group">
-                                <textarea class="form-control" placeholder="Local Government"></textarea>
+                                <input type="" name="" class="form-control"> 
                               </div>
                             </div>
                           </div>
                         </div>
-                        <a class="btn btn-primary btn-block" href="/">Update</a>
+                        <input type="submit" name="" value="Submit" class="btn btn-primary btn-block">
                         <hr>
                      </form>
                     
-
-
-
-
 
                      <!-- TABLE -->
                      <div class="table-responsive">
